Fix desktop responsiveness and alignment of cards

--- a/public/styles.css
+++ b/public/styles.css
@@ -600,52 +600,12 @@ video {
   z-index: 20;
 }
 
-.mb-6{
-  margin-bottom: 1.5rem;
-}
-
 .mt-1{
   margin-top: 0.25rem;
 }
 
 .mt-6{
   margin-top: 1.5rem;
-}
-
-.mb-60{
-  margin-bottom: 15rem;
-}
-
-.mt-5{
-  margin-top: 1.25rem;
-}
-
-.mt-60{
-  margin-top: 15rem;
-}
-
-.mt-4{
-  margin-top: 1rem;
-}
-
-.mt-40{
-  margin-top: 10rem;
-}
-
-.mt-3{
-  margin-top: 0.75rem;
-}
-
-.mt-32{
-  margin-top: 8rem;
-}
-
-.mt-2{
-  margin-top: 0.5rem;
-}
-
-.mt-28{
-  margin-top: 7rem;
 }
 
 .flex{
@@ -680,14 +640,6 @@ video {
   height: 100%;
 }
 
-.h-20{
-  height: 5rem;
-}
-
-.h-2{
-  height: 0.5rem;
-}
-
 .w-3{
   width: 0.75rem;
 }
@@ -702,10 +654,6 @@ video {
 
 .w-full{
   width: 100%;
-}
-
-.w-screen{
-  width: 100vw;
 }
 
 .-translate-y-full{
@@ -806,9 +754,14 @@ video {
   background-color: rgb(255 255 255 / var(--tw-bg-opacity, 1));
 }
 
-.bg-black{
+.bg-red-200{
   --tw-bg-opacity: 1;
-  background-color: rgb(0 0 0 / var(--tw-bg-opacity, 1));
+  background-color: rgb(254 202 202 / var(--tw-bg-opacity, 1));
+}
+
+.bg-red-500{
+  --tw-bg-opacity: 1;
+  background-color: rgb(239 68 68 / var(--tw-bg-opacity, 1));
 }
 
 .object-cover{
@@ -862,6 +815,10 @@ video {
   padding-right: 1.5rem;
 }
 
+.pt-28{
+  padding-top: 7rem;
+}
+
 .pt-4{
   padding-top: 1rem;
 }
@@ -874,12 +831,16 @@ video {
   padding-top: 2rem;
 }
 
-.pb-6{
-  padding-bottom: 1.5rem;
+.pt-20{
+  padding-top: 5rem;
 }
 
-.pt-28{
-  padding-top: 7rem;
+.pl-1{
+  padding-left: 0.25rem;
+}
+
+.pl-1\.5{
+  padding-left: 0.375rem;
 }
 
 .text-center{
@@ -1047,12 +1008,9 @@ video {
     right: auto;
   }
 
-  .lg\:col-span-1{
-    grid-column: span 1 / span 1;
-  }
-
-  .lg\:col-span-2{
-    grid-column: span 2 / span 2;
+  .lg\:mx-9{
+    margin-left: 2.25rem;
+    margin-right: 2.25rem;
   }
 
   .lg\:mb-0{
@@ -1063,20 +1021,12 @@ video {
     margin-top: 0px;
   }
 
-  .lg\:mt-28{
-    margin-top: 7rem;
-  }
-
   .lg\:hidden{
     display: none;
   }
 
   .lg\:min-h-screen{
     min-height: 100vh;
-  }
-
-  .lg\:w-full{
-    width: 100%;
   }
 
   .lg\:w-1\/3{
@@ -1107,6 +1057,30 @@ video {
   .lg\:px-9{
     padding-left: 2.25rem;
     padding-right: 2.25rem;
+  }
+
+  .lg\:pl-1{
+    padding-left: 0.25rem;
+  }
+
+  .lg\:pl-1\.5{
+    padding-left: 0.375rem;
+  }
+
+  .lg\:pl-0{
+    padding-left: 0px;
+  }
+
+  .lg\:pl-\[cal\]{
+    padding-left: cal;
+  }
+
+  .lg\:pl-\[calc\(100\%\/3\)\]{
+    padding-left: calc(100% / 3);
+  }
+
+  .lg\:pt-6{
+    padding-top: 1.5rem;
   }
 
   .lg\:text-left{
